<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_sign_up" />

        <ScrollView
            android:id="@+id/mainScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1.0">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/border_facebook" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:orientation="horizontal">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                app:iiv_color="@color/white"
                                app:iiv_icon="@string/faw_facebook_official" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:text="@string/facebook"
                                android:textColor="@color/white"
                                android:textSize="19sp" />
                        </LinearLayout>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1.0">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/border_google" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:orientation="horizontal">

                            <com.mikepenz.iconics.view.IconicsImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center_vertical"
                                app:iiv_color="@color/white"
                                app:iiv_icon="@string/faw_google_plus_square" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="5dp"
                                android:text="@string/google"
                                android:textColor="@color/white"
                                android:textSize="19sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/orTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/or"
                    android:textColor="@color/main_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/errorTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/invalid_email_address"
                    android:textColor="@color/colorRed"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/colorSecond"
                    android:textColorHint="@color/black_light"
                    android:theme="@style/EditTextStyle" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorSecond"
                    android:textColorHint="@color/black_light"
                    android:theme="@style/EditTextStyle" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/colorSecond"
                    android:textColorHint="@color/black_light"
                    android:theme="@style/EditTextStyle" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorSecond"
                    android:textColorHint="@color/black_light"
                    android:theme="@style/EditTextStyle" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorSecond"
                    android:textColorHint="@color/black_light"
                    android:theme="@style/EditTextStyle" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/gradient_border"
                    android:onClick="signUpBtnClicked"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/loginTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:onClick="loginClicked"
                    android:text="@string/already_a_member_login"
                    android:textColor="@color/black_1"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
